--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -6,13 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autocompleter": "^8.0.4",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "bootstrap-select": "^1.13.18",
+    "jquery": "^3.7.0",
     "pdfjs-dist": "^2.6.347",
     "react": "^18.2.0",
+    "react-bootstrap-select": "^0.14.0",
     "react-dom": "^18.2.0",
+    "react-multi-select-component": "^4.3.4",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.0",
+    "react-select": "^5.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
